# SyncFolder

./: .gitignore  CMakeLists.txt  README.md  changedlog.txt
src/: FolderSyncWorker.cpp  FolderSyncWorker.h  FolderWatcher.cpp  FolderWatcher.h  HttpClientTabWidget.cpp  HttpClientTabWidget.h  HttpClientTabWidget.ui  HttpFolderSyncWorker.cpp  HttpFolderSyncWorker.h  HttpServerTabWidget.cpp  HttpServerTabWidget.h  HttpServerTabWidget.ui  HttpSyncServer.cpp  HttpSyncServer.h  LocalSyncTabWidget.cpp  LocalSyncTabWidget.h  LocalSyncTabWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PairEditDialog.cpp  PairEditDialog.h  PairEditDialog.ui  SyncTypes.h  main.cpp
